<resources>
    <string name="app_name">Naumenko</string>
    <string name="Popular">Популярные</string>
    <string name="search_icon">search icon</string>
    <string name="storyline">storyline</string>
    <string name="genres">Жанры:\u0020</string>
    <string name="countries">Страны:\u0020</string>
    <string name="film_poster">film poster</string>
    <string name="back_button">back button</string>
    <string name="no_connect_error_message">Произошла ошибка при загрузке данных,\n проверьте подключение к сети</string>
    <string name="no_connection_error">no connection error icon</string>
    <string name="retry">Повторить</string>
    <string name="favorites">Избранное</string>
    <string name="not_found">Не найдено</string>
    <string name="search">Поиск</string>
    <string name="star_wars_title">Изгой-один: Звёздные войны</string>
    <string name="fantasy">Фантастика</string>
    <string name="_2015">2015</string>
</resources>