<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/film_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/film_poster"
        android:scaleType="fitXY"
        android:src="@drawable/banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/film_details_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/film_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_bold"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/film_poster"
        tools:targetApi="p"
        tools:text="Film Title" />

    <TextView
        android:id="@+id/film_storyline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_light"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/film_title"
        tools:targetApi="p"
        tools:text="Storyline" />

    <TextView
        android:id="@+id/film_genres_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/genres"
        android:textFontWeight="700"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/film_storyline"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/film_countries_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/countries"
        android:textFontWeight="700"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/film_genres_text"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/film_genres_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_light"
        android:maxLines="1"
        android:text="@string/storyline"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/film_genres_title"
        app:layout_constraintTop_toBottomOf="@id/film_storyline"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/film_countries_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_light"
        android:maxLines="1"
        android:text="@string/storyline"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/film_countries_title"
        app:layout_constraintTop_toBottomOf="@id/film_genres_title"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>