<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fav_list_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/fav_list_small_poster"
                android:layout_width="40dp"
                android:layout_height="63dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/film_poster"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                tools:src="@drawable/small_poster" />

            <TextView
                android:id="@+id/fav_list_film_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="15dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_black"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/fav_list_small_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="p"
                tools:text="@string/star_wars_title" />

            <TextView
                android:id="@+id/fav_list_film_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_light"
                android:maxLines="1"
                android:textFontWeight="500"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/fav_list_film_year"
                app:layout_constraintTop_toBottomOf="@id/fav_list_film_title"
                tools:targetApi="p"
                tools:text="@string/fantasy" />

            <TextView
                android:id="@+id/fav_list_film_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto_light"
                android:textFontWeight="800"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/fav_list_small_poster"
                app:layout_constraintTop_toBottomOf="@id/fav_list_film_title"
                tools:targetApi="p"
                tools:text="@string/_2015" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="start"
                app:constraint_referenced_ids="fav_list_favorites_icon" />

            <ImageView
                android:id="@+id/fav_list_favorites_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/favorites"
                android:src="@drawable/favs_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>