<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.FragmentFilmList">

    <TextView
        android:id="@+id/popular_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Popular"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/search_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="22dp"
        android:contentDescription="@string/search_icon"
        android:src="@drawable/search_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popular_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popular_title"
        tools:listitem="@layout/view_holder_film_list" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="popular_button_film_list, favorites_button_film_list"/>


    <Button
        android:id="@+id/popular_button_film_list"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#0094FF"
        android:fontFamily="@font/roboto_black"
        android:text="@string/Popular"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />

    <Button
        android:id="@+id/favorites_button_film_list"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#0094FF"
        android:fontFamily="@font/roboto_black"
        android:text="@string/favorites"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="p" />

    <include
        android:id="@+id/error_view_layout_film_list"
        layout="@layout/network_error_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>